feat: manage sensitive words
